--- a/src/index.css
+++ b/src/index.css
@@ -373,3 +373,10 @@ main {
   color: #fff;
   font-size: 0.5rem;
 }
+
+.error-message {
+  color: red;
+  font-weight: bold;
+  margin-bottom: 10px;
+  text-align: center;
+}
